# coco-pipe

./: .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: python-tests.yml
coco_pipe/: __init__.py
coco_pipe/decoding/: __init__.py  _cache.py  _constants.py  _diagnostics.py  _engine.py  _metrics.py  _specs.py  _splitters.py  cache.py  capabilities.py  configs.py  constants.py  core.py  diagnostics.py  embedding_cache.py  embedding_extractors.py  engine.py  experiment.py  interfaces.py  metrics.py  neural.py  registry.py  result.py  splitters.py  stats.py  utils.py
coco_pipe/decoding/fm_hub/: __init__.py  _factory.py  base.py  cbramod.py  reve.py
coco_pipe/decoding/fm_hub/cbramod_src/: cbramod.py
coco_pipe/descriptors/: __init__.py  configs.py  core.py  validation.py
coco_pipe/descriptors/extractors/: __init__.py  _parametric_fit.py  _psd.py  base.py  complexity.py  parametric.py  spectral.py  utils.py
coco_pipe/dim_reduction/: core.py
coco_pipe/dim_reduction/evaluation/: _supervised.py  core.py
coco_pipe/fm/: __init__.py
coco_pipe/fm/cbramod/: __init__.py
coco_pipe/io/: dataset.py  structures.py  utils.py
coco_pipe/report/: __init__.py  core.py
coco_pipe/report/templates/: base.html  section.html
coco_pipe/viz/: __init__.py  decoding.py  plotly_utils.py
configs/: run_descriptors_eeg.yml
docs/source/: api_reference.md  conf.py  decoding.md  index.rst  sg_execution_times.rst
docs/source/_ext/: capability_table.py
docs/source/decoding/: concepts.rst  configs.rst  cv_strategies.rst  experiment.rst  feature_selection.rst  index.rst  metrics.rst  model_comparison.rst  models.rst  result.rst  stats.rst  temporal_decoding.rst
docs/source/decoding/advanced/: custom_estimators.rst  foundation_models.rst  reproducibility.rst
docs/source/decoding/examples/: basic_classification.rst  grouped_cv.rst  model_comparison.rst  temporal_eeg.rst
examples/: demo_structures.py  descriptors_example.py
scripts/: run_descriptors.py
tests/: conftest.py  test_decoding_baselines.py  test_decoding_cache.py  test_decoding_capabilities.py  test_decoding_configs.py  test_decoding_cv.py  test_decoding_diagnostics.py  test_decoding_engine.py  test_decoding_estimator_smoke.py  test_decoding_experiment.py  test_decoding_feature_selection.py  test_decoding_fm_hub.py  test_decoding_interfaces.py  test_decoding_metrics.py  test_decoding_registry.py  test_decoding_registry_config.py  test_decoding_results.py  test_decoding_specs.py  test_decoding_splitters.py  test_decoding_stats.py  test_decoding_temporal.py  test_descriptors_configs.py  test_descriptors_core.py  test_descriptors_extractors.py  test_dimred_evaluation.py  test_io_dataset.py  test_io_structures.py  test_report_core.py  test_report_decoding.py  test_report_provenance.py  test_viz_decoding.py
