[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coco-pipe"
version = "0.0.1"
description = "A pipeline for EEG bio-data analysis with ML and Deep Learning components"
authors = [
  { name = "Hamza Abdelhedi", email = "hamza.abdelhedii@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.0",
    "pandas",
    "scikit-learn>1.6",
    "matplotlib",
    "seaborn",
    "scipy",
    "pyyaml",
    "pydantic",
    "hydra-core",
    "requests",
    "openpyxl",
    "joblib",
    "plotly",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "black",
    "isort",
    "sphinx>=4.0.0",
    "insegel",
    "furo",
    "sphinx_gallery",
    "sphinx-copybutton",
    "sphinxcontrib-mermaid",
    "sphinx-autoapi",
    "myst-parser",
]
test = [
    "pytest>=7.0",
    "pytest-cov",
]
docs = [
    "sphinx>=4.0.0",
    "insegel",
    "furo",
    "sphinx_gallery",
    "sphinx-copybutton",
    "sphinxcontrib-mermaid",
    "sphinx-autoapi",
    "myst-parser",
]
dask = [
    "dask[array]",
    "dask-ml",
]
neighbor = [
    "umap-learn[plot]",
    "trimap",
    "phate",
    "pacmap",
    "faiss-cpu",
]
parametric-umap = [
    "umap-learn[plot]",
    "tensorflow",
    "keras",
]
ivis = [
    "annoy>=1.17.3",
    "tensorflow",
    "keras",
    "ivis @ git+https://github.com/beringresearch/ivis.git",
]
topology = [
    "torch",
    "skorch",
    "gudhi",
]
torch = [
    "torch",
]
braindecode = [
    "braindecode",
]
hf = [
    "transformers",
    "huggingface-hub",
]
peft = [
    "peft",
    "accelerate",
]
quant = [
    "bitsandbytes",
]
moabb = [
    "moabb",
    "mne",
]
torcheeg = [
    "torcheeg",
]
dev-gpu = [
    "pytest>=7.0",
    "torch",
    "accelerate",
]
spatiotemporal = [
    "pydmd",
    "meegkit",
]
eeg = [
    "mne>=1.9.0",
    "mne-bids>=0.10.0",
    "meegkit",
]
descriptors = [
    "specparam",
    "antropy",
    "neurokit2",
]
dim-red = [
    "dask[array]",
    "dask-ml",
    "umap-learn[plot]",
    "trimap",
    "phate",
    "pacmap",
    "faiss-cpu",
    "tensorflow",
    "keras",
    "annoy>=1.17.3",
    "ivis @ git+https://github.com/beringresearch/ivis.git",
    "torch",
    "skorch",
    "gudhi",
    "pydmd",
    "meegkit",
]
full = [
    "dask[array]",
    "dask-ml",
    "umap-learn[plot]",
    "trimap",
    "phate",
    "pacmap",
    "faiss-cpu",
    "tensorflow",
    "keras",
    "annoy>=1.17.3",
    "ivis @ git+https://github.com/beringresearch/ivis.git",
    "torch",
    "skorch",
    "gudhi",
    "pydmd",
    "meegkit",
    "mne>=1.9.0",
    "mne-bids>=0.10.0",
    "specparam",
    "antropy",
    "neurokit2",
]

[project.urls]
Homepage = "https://github.com/BabaSanfour/coco-pipe"
Documentation = "https://cocopipe.readthedocs.io/"
Repository = "https://github.com/BabaSanfour/coco-pipe.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["coco_pipe*", "scripts*"]

[tool.setuptools.package-data]
"coco_pipe.report.templates" = ["*.html"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
